header z-index fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -99,7 +99,7 @@ header {
         top: 0;
         width: 100%;
         background-color: $primary;
-        z-index: 9999;
+        z-index: 1000;
         animation-name: fadeIn;
         animation-duration: 0.4s;
     }
